# tdl-notebook

./: .gitignore  MANIFEST.in  README.md  annotation.py  bbox.ipynb  pyproject.toml  requirements.txt  tdl_colab.ipynb  tdl_jupyter.ipynb
data-prep/: create-csv.py
exp/: audio_bbox_annotation_demo.ipynb  audio_bbox_annotator.py  bbox_widget_annotator.py
tdl_annotation/: __init__.py  annotation.py
tests/: test_annotate_fix.py  test_buffer_functionality.py
